--- a/css-servicios/style.css
+++ b/css-servicios/style.css
@@ -294,7 +294,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .bg-secondary {
-  background-color: #ffffff !important;
+  background-color: #e61010 !important;
 }
 
 .text-primary {
