--- a/scss-servicios/_botones.scss
+++ b/scss-servicios/_botones.scss
@@ -1,6 +1,6 @@
 
 .bg-secondary {
-	background-color: #ffffff !important;
+	background-color: #e61010 !important;
 }
 .text-primary {
 	color: #0400ff00 !important;
