--- a/css-servicios/style.css
+++ b/css-servicios/style.css
@@ -294,11 +294,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .bg-secondary {
-  background-color: rgba(10, 153, 219, 0.8901960784) !important;
+  background-color: rgba(60, 66, 68, 0.8901960784) !important;
 }
 
 .text-primary {
-  color: rgba(4, 0, 255, 0) !important;
+  color: rgba(233, 7, 7, 0.9333333333) !important;
 }
 
 .back-to-top {
@@ -351,6 +351,21 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 .breadcrumb-item + .breadcrumb-item::before {
   color: var(--light);
+}
+
+.serv {
+  background-color: aqua;
+  position: absolute;
+  left: 0%;
+  top: 300.922px;
+}
+
+@media (min-width: 576px) {
+  .serv {
+    background-color: aliceblue;
+    flex: 0 0 auto;
+    width: 50%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
