Se Modifico martes

--- a/barretocss/style.css
+++ b/barretocss/style.css
@@ -353,4 +353,26 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   color: var(--light);
 }
 
+.barretos {
+  background-color: aqua;
+  position: absolute;
+  left: 0%;
+  top: 300.922px;
+}
+
+.text-primary {
+  color: #EB1616 !important;
+}
+
+@media (min-width: 576px) {
+  .barretos {
+    flex: 0 0 auto;
+    width: 50%;
+    background-color: rgb(255, 0, 242);
+  }
+  .text-primary {
+    color: #2250e6 !important;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
